--- a/txr-system-v9(web)/src/main/webapp/index.html
+++ b/txr-system-v9(web)/src/main/webapp/index.html
@@ -1,10 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
-<body>
-$END$
+<body class="container">
+    <hr/>
+        <h1>Transfer system</h1>
+    <hr/>
+    <div class="row">
+        <div class="col-6">
+            <div class="card">
+                <div class="card-header">Txr-Form</div>
+                <div class="card-body">
+                    <form action="txr.htm" method="post">
+                        <div class="form-group">
+                            <label>Amount</label>
+                            <input class="form-control" name="amount">
+                        </div>
+                        <div class="form-group">
+                            <label>Source Account</label>
+                            <input class="form-control" name="sourceAccountNumber">
+                        </div>
+                        <div class="form-group">
+                            <label>Target Account</label>
+                            <input class="form-control" name="targetAccountNumber">
+                        </div>
+                        <button class="btn btn-primary">Txr</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
